# PW-Sistema_de_Teleconsultas

./: README.md
.github/workflows/: ci.yml
backend/: db.sqlite3  pyproject.toml  requirements.txt
backend/backend/: settings.py  urls.py
backend/teleconsulta/: admin.py  apps.py  permissions.py
backend/teleconsulta/migrations/: 0001_initial.py  0002_paciente.py  0003_especialidade_medico.py  0004_horario.py  0005_consulta.py
backend/teleconsulta/models/: __init__.py  consulta.py  especialidade.py  horario.py  medico.py  paciente.py  usuario.py
backend/teleconsulta/serializers/: consulta.py  especialidade.py  horario.py  medico.py  paciente.py  usuario.py
backend/teleconsulta/views/: consulta.py  especialidade.py  horario.py  medico.py  paciente.py  token.py  usuario.py
database/: teleconsulta.sql
frontend/: .gitignore  package-lock.json  package.json
frontend-teleconsulta/: README.md  package-lock.json  package.json
frontend/cypress/e2e/: agendarConsulta.cy.js  dasbordPaciente.cy.js  historico.cy.js  perfil.cy.js
frontend/src/: App.vue  main.js
frontend/src/components/: Footer.vue  Header.vue
frontend/src/components/admin/: SidebarAdminComp.vue
frontend/src/components/doctor/: SidebarDoctorComp.vue
frontend/src/components/patient/: SidebarPatientComp.vue
frontend/src/router/: index.js
frontend/src/services/: api.js  auth.js  paciente.js
frontend/src/store/: index.js
frontend/src/view/: HomeView.vue  PerfilMedicoView.vue  PerfilView.vue
frontend/src/view/admin/: AdminConsultasView.vue  AdminDashboardView.vue  AdminHorariosView.vue  (+3 more)
(+13 files in other folders)
